--- a/html/home.html
+++ b/html/home.html
@@ -3,15 +3,16 @@
 <html lang="en">
 
 <head>
+  
   <link rel="stylesheet" href="/css/home.css">
   <link rel="stylesheet" href="/css/barranav.css">
   <script src="/carrusel de imagenes.js"></script>
   <script src="https://kit.fontawesome.com/c01776725e.js" crossorigin="anonymous"></script>
+
 </head>
 <header>
+
   <title> Ciudad Universitaria </title>
-
-
 
   <div class="barra_inicio">
     <header>
@@ -62,7 +63,12 @@
 
     <ul>
 
-      <h1>Idiomas_</h1>
+      <div id="languageContainer">
+        <h1 id="changingText">Idiomas_</h1>
+      </div>
+
+      <script src="/js/animaciontexto.js"></script>
+
       <div class="lista1">
         <h2>
 
