--- a/html/registro.html
+++ b/html/registro.html
@@ -39,6 +39,8 @@
     <div class="centered-image">
         <img src="/image/title.PNG" alt="Imagen centrada" WIDTH="369" HEIGHT="255">
     </div>
+    
+<div class="info">
 
     <h1 class="titulo"> Forma parte de <br> Ciudad <span style="color: red;"> U! </span> </h1>
     <h2 class="subtitulo"> Enterate de los requisitos <br> para unirte</h2>
@@ -65,6 +67,8 @@
     <div class="egresados_text"> Titulo y/o matricula <br> habilitante</div>
     <div class="universitarios"> Universitarios</div>
     <div class="univer_text">Certificado de <br> alumno regular</div>
+
+</div>
 
     <!--Formulario-->
 
