--- a/html/est-com login.html
+++ b/html/est-com login.html
@@ -45,7 +45,7 @@
           <input type="text" id="usernamei" name="usernamei" required>
           <label for="password">Contraseña</label>
           <input type="password" id="passwordi" name="passwordi" required>
-          <input type="submit"class="botonesIR" value="Iniciar Sesión">
+          <input type="submit"class="botonesIR" value="Iniciar Sesión" id="botoni">
       </form>
   </div>
   <div class="login-container">
