--- a/html/est-com login.html
+++ b/html/est-com login.html
@@ -25,7 +25,14 @@
         <li><a href="/html/comercio.html">Adheri tu Comercio</a></li>
 
         <li><a href="/html/registro.html">Ùnite</a></li>
-        
+        <div class="contenedor">
+          <img class="imagen" src="/image/menu.svg" onclick="mostrarLista()">
+          <ul class="lista" id="miLista">
+              <li><a href="#">Mis datos</a></li>
+              <li><a href="#">Cambiar Contraseña</a></li>
+              <li><a href="#">Salir🥺</a></li>
+          </ul>
+      </div>
     </nav>
 </header>
 
